[gd_scene load_steps=3 format=1]

[ext_resource path="res://objects/Backgrounds.gd" type="Script" id=1]
[ext_resource path="res://images/g13200.png" type="Texture" id=2]

[node name="Backgrounds" type="Node2D"]

script/script = ExtResource( 1 )

[node name="bgFar" type="Sprite" parent="."]

texture = ExtResource( 2 )
centered = false
region = true
region_rect = Rect2( 0, 671, 1920, 666 )

[node name="bgFar1" type="Sprite" parent="."]

texture = ExtResource( 2 )
centered = false
region = true
region_rect = Rect2( 0, 671, 1920, 666 )

[node name="bgNear" type="Sprite" parent="."]

transform/scale = Vector2( 0.5, 0.5 )
texture = ExtResource( 2 )
centered = false
region = true
region_rect = Rect2( 0, 0, 1920, 666 )

[node name="bgNear1" type="Sprite" parent="."]

transform/scale = Vector2( 0.5, 0.5 )
texture = ExtResource( 2 )
centered = false
region = true
region_rect = Rect2( 0, 0, 1920, 666 )


